# medmax

./: .dockerignore  .gitignore  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .env.example  Cargo.toml  Dockerfile  seed.sql
backend/src/: main.rs
backend/src/middleware/: auth.rs
backend/src/models/: chat.rs  checklist.rs  comment.rs  iol.rs  media.rs  mod.rs  patient.rs  telegram.rs  user.rs
backend/src/routes/: auth.rs  chat.rs  checklists.rs  iol.rs  media.rs  mod.rs  patients.rs  print.rs  surgeon.rs  videochat.rs
backend/src/services/: iol.rs  mod.rs  pdf.rs  telegram.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json  robots.txt  sitemap.xml  sw.js
frontend/src/: App.tsx  index.css  main.tsx  webcodecs.d.ts
frontend/src/api/: client.ts
frontend/src/components/: ChecklistItemRow.tsx  ImageViewer.tsx  Layout.tsx  MediaGallery.tsx  MiniCalendar.tsx  OfflineIndicator.tsx  PatientDrawer.tsx  ProtectedRoute.tsx  Sidebar.tsx  StatusBadge.tsx  VideoCall.tsx  form-fields.tsx
frontend/src/hooks/: useAnime.ts  useImageCompression.ts  (+2 more)
infra/: .env.prod.example  Caddyfile
infra/ansible/: inventory.ini.example  playbook.yml
infra/scripts/: backup.sh  copy-certs.sh  deploy.sh
migrations/: 001_initial.sql  002_iol_optional_patient.sql  003_chat.sql  004_operation_time.sql
sfu/: .env.example  .gitattributes  Cargo.toml  Dockerfile  LICENSE
sfu/src/: auth.rs  client.rs  config.rs  main.rs  packet.rs  room.rs  server.rs
(+24 files in other folders)
