[package]
name = "medmax-sfu"
version = "0.1.0"
edition = "2024"
author = "Andrey Vasilev aka 'neokofg'"

[dependencies]
tokio = { version = "1", features = [
    "full",
    "sync",
    "rt-multi-thread",
    "macros",
    "time",
] }
wtransport = "0.7"
bytes = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
jsonwebtoken = "9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.clippy]
while_let_loop = "allow"
collapsible_if = "allow"
